--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,5 +1,5 @@
 /* ============================================================================
-    Import from screen.scss 
+    Import from mobile.scss 
     
     4.MEDIA QUERIES
 ============================================================================= */
