--- a/sass/_specific-html-support.scss
+++ b/sass/_specific-html-support.scss
@@ -26,7 +26,7 @@ a abbr {
 /* computer science */
 
 pre, code, tt, samp, kbd {
-  font: normal normal 1em/1.5em #{$monosp-serif};
+  font: normal normal 1em/1.5em #{$monospSerif};
 }
 
 pre {
