--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 
 /* ============================================================================
     
-    UPLAB 2012
+    Uplab 2012
     http://uplab.ru
     
 ============================================================================= */
