--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,9 +2,7 @@
 
 /* ============================================================================
     
-    Uplab 2012
-    http://uplab.ru
-    
+    Weiss 2012
 ============================================================================= */
 
 @import "basic-and-layout";
