--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,3 +1,40 @@
+$cols: 12;
+$gutter: 2%;
+
+
+$one_col: (100% - ($gutter * ($cols - 1))) / $cols;
+
+@mixin cols($num) {
+  width: ($one_col * $num) + ($gutter * ($num - 1));
+}
+
+@mixin sub_cols($num_child, $num_parent) {
+  $parent_size: ($one_col * $num_parent) + ($gutter * ($num_parent - 1));
+  $child_size: ($one_col * $num_child) + ($gutter * ($num_child - 1));
+  margin-left: ($gutter / $parent_size) * 100%;
+  width: ($child_size / $parent_size) * 100%;
+}
+
+/* @group grid */
+// .row {
+//   #{enumerate('.span', 1, $cols, '')} {
+//     float: left;
+//     margin-left: $gutter;
+//   }
+
+//   @for $i from 1 through $cols {
+//     .span#{$i} {
+//       @include cols($i);
+
+//       @for $j from 1 through ($i - 1) {
+//         .span#{$j} {
+//           @include sub_cols($j, $i);
+//         }
+//       }
+//     }
+//   }
+// }
+
 //
 // Blankwork semantic grid
 // http://www.blankwork.net/
@@ -22,8 +59,7 @@ $_width: $_columns * ($_column-width + $_gutter);
 // get_width(3) or get_width(3, true) would return 220px;
 // and plain get_width() or get_width would return 940px;
 
-@function get_width($columns:$_columns, $onlyInnerWidth: true, $_subtract:0)
-{
+@function get_width($columns:$_columns, $onlyInnerWidth: true, $_subtract:0) {
   // First set a default return value 
   $return: ($_column-width + $_gutter) * $columns - $_subtract !default;
 
@@ -39,76 +75,42 @@ $_width: $_columns * ($_column-width + $_gutter);
   @return $return;
 }
 
-// ClearFix Mixin
-// Thanks to http://nicolasgallagher.com/micro-clearfix-hack/
-  @mixin clearfix {
-    *zoom:1;
-    &:before, &:after
-    {
-      content: "";
-      display:table;
-    }
-
-    &:after
-    {
-      clear:both;
-    }
-  }
-
-
 // Column Mixin:
 // We're defining the default values as follows:
 // Default Column Count: Max Column Count
 // Padding (explained below): 0
 // Margin is the gutter width, but can be overridden 
-@mixin column($columns: $_columns, $_subtract:0, $_offset: null, $gutter:$_gutter)
-{
+@mixin column($columns: $_columns, $_subtract:0, $_offset: null, $gutter:$_gutter) {
   // Default Properties for a column:
   display:inline;
   float:left;
    $getWidth: get_width($columns, true, $_subtract); // Use the width calculation function to get the width 
 
-    @if $gutter != 0 
-    {
+    @if $gutter != 0 {
         // Check for Alpha (a, first, f);
         @if $_offset == alpha {
-          margin-left: -($gutter / 2);margin-right:$gutter/2;
-        } 
-        @else if $_offset == a {
-          margin-right: ($gutter / 2);margin-left:0;
-        }
-        @else if $_offset == first {
-          margin-right: ($gutter / 2);margin-left:0;
-        }
-        @else if $_offset == f {
-          margin-right: ($gutter / 2);margin-left:0;
+          margin-left: -($gutter / 2);
+          margin-right: $gutter/2;
         }
 
         // Check for Omega (o, l, last);
         @else if $_offset == omega {
-          margin-right: -($gutter / 2);margin-left:$gutter/2;
+          margin-right: -($gutter / 2);
+          margin-left: $gutter/2;
         }
-        @else if $_offset == o {
-          margin-left: ($gutter / 2);margin-right:0;
-        }
-        @else if $_offset == last {
-          margin-left: ($gutter / 2);margin-right:0;
-        }
-        @else if $_offset == l {
-          margin-left: ($gutter / 2);margin-right:0;
-        }
+
         // No Margins
         @else if $_offset == full {
           $getWidth: $getWidth + $gutter;
-        } 
+        }
+
         @else if $_offset == none {
           $getWidth: $getWidth + $gutter;
         }
 
         @else {
-        margin-left: ($gutter / 2); 
-        margin-right: ($gutter / 2);
-      
+          margin-left: ($gutter / 2); 
+          margin-right: ($gutter / 2);
         }
     }
 
@@ -120,8 +122,7 @@ $_width: $_columns * ($_column-width + $_gutter);
 // But just in case someone finds an alternative use of this, 
 // we shouldhave the flexibility
 // So wrapper( column count, center ?, subtract)
-@mixin wrapper($columns: $_columns, $center:true, $_subtract:0)
-{
+@mixin wrapper($columns: $_columns, $center:true, $_subtract:0) {
   // Because this is a wrapper, we don't need the outer gutter - we need the full width
   $getWrapperWidth: get_width($columns, false);
   // In case there is a need to subtract the wrapper
@@ -129,24 +130,22 @@ $_width: $_columns * ($_column-width + $_gutter);
   width:$wrapperWidth;
 
   // If we want the wrapper to be centered (by default we do)
-  @if $center == true
-  {
+  @if $center == true {
     margin-left:auto;
     margin-right:auto;
   }
 
 // And clear the mess afterwards:
-@include clearfix;
+@extend .clearfix;
 
 }
 
 // To be able to use columns inside another element,
 // You need to set that element to be a container (of how many columns)
 // So: @include container(x_number_of_columns)
-@mixin container($columns:$_columns, $_subtract:0)
-{
-  display:inline;
-  float:left;
+@mixin container($columns:$_columns, $_subtract:0) {
+  //display:inline;
+  //float:left;
     $getWidth: get_width($columns, false); // Use the width calculation function to get 
     $columnWidth: $getWidth - $_subtract;
     width: $columnWidth;
@@ -177,7 +176,7 @@ $_width: $_columns * ($_column-width + $_gutter);
   -webkit-background-clip: padding-box;
 }
 
-@mixin bsh($bshval: 0px 0px 0.83em rgba(0,0,0,0.5)) {
+@mixin bsh($bshval: 0 0 4px rgba(0,0,0,0.5)) {
   -moz-box-shadow: $bshval;
   -webkit-box-shadow: $bshval;
   -o-box-shadow: $bshval;
