--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -15,7 +15,7 @@ $one_col: (100% - ($gutter * ($cols - 1))) / $cols;
   width: ($child_size / $parent_size) * 100%;
 }
 
-/* @group grid */
+// @group grid
 // .row {
 //   #{enumerate('.span', 1, $cols, '')} {
 //     float: left;
